Closes #21: Split content across multiple pages.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "gulp",
-    "test": "mocha"
+    "test": "gulp && mocha"
   },
   "private": true,
   "devDependencies": {
